See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.80.00

17.06.30 BJH  Release 10.79.00

              Add pamtable .

              pamgauss: Add -maximize, -oversample .  Thanks Anton Shepelev
              <anton.txt@gmail.com>

              pnmconvol: Extend -normalize to be applicable to convolution
              kernels specified by PGM file.  Thanks Anton Shepelev
              <anton.txt@gmail.com>

              g3topbm: tolerate fill bits.

              pbmtog3: Add -align8, -align16.

              ppmshadow: Improve results for very small maxval.

              ppmshadow: eliminate extraneous messages from pnmconvol.

              libnetpbm: Improve error message for purported image that is
              exactly 1 byte long (so ends in the middle of what would be the
              magic number).

              pbmtox10bm: Get the Perl interpreter for this Perl program from
              the PATH instead of hardcoded as /usr/bin/perl (like all other
              Netpbm Perl programs).

              ppmcolormask: fix incorrect output when input maxval is not 255.
              Always broken (ppmcolormask was new in Netpbm 9.0, April 2000).

              bmptopnm: fix crash when input is a Windows BMP with negative
              number for width.  Always broken.  (bmptopnm was new, as
              bmptoppm, in original Netpbm, 1992).

              pamcomp: fix incorrect output with -mixtransparency.
              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pamcomp: remove debug trace message with -mixtransparency.
              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pnmtojpeg: fix array bounds violation in argument list.  Always
              broken (pnmtojpeg was new to Netpbm in Netpbm 8.2 (March 2000).
