@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.80.00
 
+              pgmmake: Fix bug: treats non-numeric gray-level argument as zero.
+              Always broken (Pgmmake was new in Netpbm 10.32, February 2006).
+
 17.06.30 BJH  Release 10.79.00
 
               Add pamtable .
